--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -36,6 +36,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ],
-    "homepage": "http://yoyounn18.github.io/react-portfolio/portfolio"
+    "homepage": "http://yoyounn18.github.io/react-portfolio"
   }
 }
